# phantom-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  premake5.lua
editor/: CMakeLists.txt  imgui.ini  premake5.lua
editor/src/: editor_app.cpp  editor_layer.cpp  editor_layer.h
editor/src/panels/: hierarchy_panel.cpp  hierarchy_panel.h
phantom/: CMakeLists.txt  phpch.cpp  phpch.h  premake5.lua
phantom/core/: core.h  entry_point.h  log.h  window.cpp  window.h
phantom/libraries/: CMakeLists.txt
phantom/src/: phantom.h  phpch.cpp  phpch.h
phantom/src/components/: mesh_component.h  name_component.h  transform_component.h
phantom/src/core/: application.cpp  application.h  core.h  entry_point.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  platform.h  scene.cpp  scene.h  window.cpp  window.h
phantom/src/events/: application_event.h  event.h  key_event.h  mouse_event.h
phantom/src/gui/: gui_layer.cpp  gui_layer.h  imgui_impl.cpp
phantom/src/gui/extensions/: extensions.h  toggle_button.cpp
phantom/src/gui/styles/: phantom_dark.cpp  phantom_light.cpp  styles.h
phantom/src/io/: model_loader.cpp  model_loader.h
phantom/src/platform/opengl/: opengl_context.cpp  opengl_context.h  opengl_frame_buffer.cpp  opengl_frame_buffer.h  (+2 more)
phantom/src/renderer/: frame_buffer.cpp  frame_buffer.h  render_context.cpp  render_context.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h
phantom/src/systems/: physics_system.h  render_system.h
phantom/src/tags/: tags.h
sandbox/: premake5.lua
sandbox/src/: sandbox.cpp  sandbox.h
